Fix span spacing

--- a/views/pages/_page-single.scss
+++ b/views/pages/_page-single.scss
@@ -19,6 +19,12 @@
   .post-title {
     @include header-style;
   }
+
+  #author-date-category {
+    > :is(span, a):not(:last-child) {
+      margin-right: 4px;
+    }
+  }
 }
 
 /*
